logs/pocket-protector.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/.libs_cffi_backend'...
Listing './lib/python3.5/site-packages/PyNaCl-1.2.1.dist-info'...
Listing './lib/python3.5/site-packages/attr'...
Listing './lib/python3.5/site-packages/attrs-17.4.0.dist-info'...
Listing './lib/python3.5/site-packages/boltons'...
Listing './lib/python3.5/site-packages/boltons-17.2.0.dist-info'...
Listing './lib/python3.5/site-packages/cffi'...
Listing './lib/python3.5/site-packages/cffi-1.11.3.dist-info'...
Listing './lib/python3.5/site-packages/nacl'...
Listing './lib/python3.5/site-packages/nacl/bindings'...
Listing './lib/python3.5/site-packages/nacl/pwhash'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pocket_protector'...
Compiling './lib/python3.5/site-packages/pocket_protector/cli.py'...
***   File "./lib/python3.5/site-packages/pocket_protector/cli.py", line 156
    print _format_top_level_help(_SUBCMDS)
                               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pocket_protector/test_file_keys.py'...
***   File "./lib/python3.5/site-packages/pocket_protector/test_file_keys.py", line 57
    print "generated file:"
                          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pocket_protector-0.0.1.egg-info'...
Listing './lib/python3.5/site-packages/pycparser'...
Listing './lib/python3.5/site-packages/pycparser/ply'...
Listing './lib/python3.5/site-packages/pycparser-2.18.egg-info'...
Listing './lib/python3.5/site-packages/ruamel'...
Listing './lib/python3.5/site-packages/ruamel/yaml'...
Listing './lib/python3.5/site-packages/ruamel.yaml-0.15.35.dist-info'...
Listing './lib/python3.5/site-packages/schema-0.6.7.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
